--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # production
 /build
+public/bundle.js
 
 # misc
 .DS_Store
@@ -18,3 +19,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/components/
+src/redux/
+src/services/
+yarn.lock
