--- a/package.json
+++ b/package.json
@@ -7,17 +7,57 @@
 	"license": "MIT",
 	"private": false,
 	"main": "index.js",
+	"scripts": {
+		"build": "webpack -p",
+		"dev": "webpack-dev-server --config webpack.dev.config.js",
+		"pretest": "standard",
+		"test": "jest"
+	},
 	"dependencies": {
-		"enzyme": "^3.3.0",
-		"jest": "^22.4.2",
+		"history": "^4.7.2",
+		"prop-types": "^15.6.0",
 		"react": "^16.2.0",
 		"react-dom": "^16.2.0",
-		"react-scripts": "1.1.1"
+		"react-redux": "^5.0.6",
+		"react-router-dom": "^4.2.2",
+		"react-router-redux": "^5.0.0-alpha.9",
+		"redux": "^3.7.2",
+		"redux-form": "^7.2.3",
+		"redux-saga": "^0.16.0",
+		"reselect": "^3.0.1",
+		"styled-components": "^3.1.6"
 	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "jest",
-		"eject": "react-scripts eject"
+	"devDependencies": {
+		"babel-core": "^6.25.0",
+		"babel-eslint": "^7.2.3",
+		"babel-loader": "^7.1.1",
+		"babel-polyfill": "^6.23.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-2": "^6.24.1",
+		"dotenv-webpack": "^1.5.4",
+		"enzyme": "^3.3.0",
+		"enzyme-adapter-react-16": "^1.1.1",
+		"enzyme-to-json": "^3.3.1",
+		"img-loader": "^2.0.1",
+		"jest": "^22.1.4",
+		"react-hot-loader": "^3.1.3",
+		"standard": "^10.0.3",
+		"url-loader": "^0.6.2",
+		"webpack": "^3.10.0",
+		"webpack-dev-server": "^2.11.1"
+	},
+	"standard": {
+		"globals": [
+			"afterAll",
+			"afterEach",
+			"beforeAll",
+			"beforeEach",
+			"describe",
+			"expect",
+			"it",
+			"jest"
+		],
+		"parser": "babel-eslint"
 	}
 }
