--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,4 @@
 {
-	"plugins": [
-		"react-hot-loader/babel"
-	],
-	"presets": [
-		"env",
-		"react",
-		"stage-2"
-	]
+	"plugins": ["react-hot-loader/babel"],
+	"presets": ["env", "react", "stage-2"]
 }
