--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"enzyme-to-json": "^3.3.1",
 		"img-loader": "^2.0.1",
 		"jest": "^22.1.4",
+		"jest-fetch-mock": "^1.4.2",
 		"react-hot-loader": "^3.1.3",
 		"standard": "^10.0.3",
 		"url-loader": "^0.6.2",
